fix: offcenter dialauge

--- a/src/styles/query.css
+++ b/src/styles/query.css
@@ -77,7 +77,6 @@
   position: fixed;
   bottom: 10px;
   left: 50%;
-  transform: translateX(-50%);
   background-color: var(--dark-cream);
   font-size: 14px;
   color: var(--page-offset);
